# mlfolder

./: .gitignore  Pipfile  pyproject.toml
.ipynb_checkpoints/: test_sheet-checkpoint.ipynb
