[tool.poetry]
name = "mlfolder"
version = "0.1.0"
description = ""
authors = ["François Dailloux <francoisdaiiloux@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8dd"
pandas = "^1.0.3"
scikit-learn = "^0.22.2"
matplotlib = "^3.2.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
